# screamer

./: .env.screamer.local.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  bundle.sh  create_dmg.sh  download_model.sh  notarize_dmg.sh  verify_latency.sh
.github/workflows/: ci.yml  dependency-audit.yml  release-macos.yml
crates/screamer-core/: Cargo.toml
crates/screamer-core/src/: ambient.rs  audio.rs  lib.rs  session.rs
crates/screamer-diarization/: Cargo.toml  build.rs
crates/screamer-diarization/src/: assets.rs  lib.rs
crates/screamer-models/: Cargo.toml
crates/screamer-models/src/: lib.rs
crates/screamer-whisper/: Cargo.toml
crates/screamer-whisper/src/: hardware.rs  lib.rs  transcriber.rs
docs/: releases.md  sdk-refactor-plan.md
patches/whisper-rs-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
resources/: Info.plist  icon.icns
scripts/: ambient_whisperx_helper.py  macos_bundle_smoke.sh  prepare_ambient_diarization_assets.py  run_screamer_local.sh
src/: ambient_controller.rs  ambient_final_pass.rs  ambient_pipeline.rs  ambient_whisperx.rs  app.rs  config.rs  diarization.rs  hardware.rs  highlight.rs  hotkey.rs  loading.rs  logging.rs  main.rs  main_window.rs  overlay.rs  paster.rs  permission_window.rs  permissions.rs  recorder.rs  screenshot.rs  session_store.rs  settings_window.rs  sound.rs  speech.rs  summary_backend.rs  theme.rs  transcriber.rs  vision.rs  vision_gemini.rs  vision_openai.rs
